# slack_export_csv_converter

./: .flake8  .gitignore  README.md  main.py  pyproject.toml  pytest.ini
slack_export_csv_converter/: convert.py  converter.py  csv_data_generator.py  exceptions.py  export_dir.py  file_io.py  logger.py  types.py
slack_export_csv_converter/tests/: convert_test.py  export_dir_test.py
tests/: convert_test.py  converter_test.py  csv_data_generator_test.py  export_dir_test.py  file_io_test.py  main_test.py
tests/test_data/: file.json  message.json  user.json
