[tool.poetry]
name = "slack-export-csv-converter"
version = "0.1.0"
description = ""
authors = ["Kei Kamigama <15102478+panda1920@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "slack_export_csv_converter"}]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
