[tool.poetry]
name = "slack-export-csv-converter"
version = "0.1.0"
description = "A simple tool to convert slack export json files into a csv"
authors = ["Kei Kamigama <15102478+panda1920@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "slack_export_csv_converter"}]

[tool.poetry.dependencies]
python = "^3.8.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
flake8 = "^6.0.0"
black = "^22.12.0"

[tool.black]
line-length = 90


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
